# claude-config

./: .gitignore  README.md
hooks/: README.md  settings.hooks.json
mcp-servers/stock-data/: README.md  pyproject.toml
mcp-servers/stock-data/src/stock_data_mcp/: __main__.py
scripts/: upload_notion.py
skills/stock-analyst/: SKILL.md
skills/stock-news/: SKILL.md
