[project]
name = "stock-data-mcp"
version = "0.1.0"
description = "MCP server for Korean (pykrx) + US (yfinance) stock data with technical indicators"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pykrx>=1.0.45",
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "ta>=0.11.0",
    "setuptools>=68.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_data_mcp"]
